@@ -448,3 +448,4 @@
 - Fixed a win32 bug found by RaYmAn causing the tray icon not to be displayed sometimes
 - Fixed a bunch of Win32 bugs reported and fixed by McSkaf
 - Made the IRCd delete its tray icon in win32 on SIGSEGV
+- Brought 005 up-to-date with spefication - added CHANMODES= support
